--- a/html/lecture5/lecture5.html
+++ b/html/lecture5/lecture5.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="https://img.freepik.com/free-vector/bird-colorful-logo-gradient-vector_343694-1365.jpg?size=338&ext=jpg&ga=GA1.1.1141335507.1718064000&semt=sph" type="image/x-icon">
+    <link rel="shortcut icon"
+        href="https://img.freepik.com/free-vector/bird-colorful-logo-gradient-vector_343694-1365.jpg?size=338&ext=jpg&ga=GA1.1.1141335507.1718064000&semt=sph"
+        type="image/x-icon">
 </head>
+
 <body>
-    
+
     <!-- input tag -->
 
-  text  <input type="text" name="" id="">
-  <br>
+    text <input type="text" name="" id="">
+    <br>
 
-   password <input type="password" name="" id="">
-   <br>
-   date <input type="date" name="" id="">
-   <br>
-   email <input type="email" name="" id="">
-   <br>
+    password <input type="password" name="" id="">
+    <br>
+    date <input type="date" name="" id="">
+    <br>
+    email <input type="email" name="" id="">
+    <br>
 
-   file <input type="file" name="" id="">
-   <br>
-radio <input type="radio" name="" id="">
-<br>
+    file <input type="file" name="" id="">
+    <br>
+    radio <input type="radio" name="" id="">
+    <br>
     checkbox <input type="checkbox" name="" id="">
     <br>
     number <input type="number" name="" id="">
@@ -50,7 +54,8 @@ radio <input type="radio" name="" id="">
     <br>
 
     <!-- form tag -->
-     <form>
+
+    <form>
         <label for="username">enter your username</label>
         <input type="text" name="" id="">
 
@@ -60,33 +65,37 @@ radio <input type="radio" name="" id="">
         <label for="button">reset</label>
         <input type="button" value="">
 
-     </form>
+    </form>
 
     <!-- span tag -->
-     <p>Lorem ipsum dolor sit amet <span style="background-color: brown;">consectetur</span> adipisicing elit. Nihil, vel.</p>
-     <br>
-     textarea <textarea name="" id=""></textarea>
-     <br>
-     <img src="https://tpc.googlesyndication.com/simgad/13819017744080435628" alt=" this ia apicture">
+    <p>Lorem ipsum dolor sit amet <span style="background-color: brown;">consectetur</span> adipisicing elit. Nihil,
+        vel.</p>
+    <br>
+    textarea <textarea name="" id=""></textarea>
+    <br>
+    <img src="https://tpc.googlesyndication.com/simgad/13819017744080435628" alt=" this ia apicture">
 
 
-     <br>
+    <br>
 
-     <!-- nav tag -->
-      <nav>
-        <a href="https://www.google.co.in/">google</a>
-        <a href="https://www.instagram.com/">instagram</a>
-        <a href="https://www.facebook.com/">facebook</a>
-        <a href="https://www.whatsapp.com/">whatsapp</a>
-      </nav>
+    <!-- nav tag -->
+    <nav>
+        <a href="https://www.google.co.in/" target="_blank">google</a>
+        <a href="https://www.instagram.com/"target="_blank">instagram</a>
+        <a href="https://www.facebook.com/" target="_blank">faceboo</a>
+        <a href="https://www.whatsapp.com/" target="_blank">whatsapp</a>
+    </nav>
 
-      <!-- figure tag -->
-      <figure style="background-color: blueviolet; width: 20%;">
-            <h1>hello meet</h1>
-            <img width="100px" style="border-radius: 50%;" src="https://images.unsplash.com/photo-1718095737567-4e4e5ae276b7?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-      </figure>
+    <!-- figure tag -->
+    <figure style="background-color: blueviolet; width: 20%;">
+        <h1>hello meet</h1>
+        <img width="100px" style="border-radius: 50%;"
+            src="https://images.unsplash.com/photo-1718095737567-4e4e5ae276b7?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="">
+    </figure>
 
-    
+
 
 </body>
+
 </html>
