--- a/sass/project/index.html
+++ b/sass/project/index.html
@@ -37,21 +37,12 @@
                                 <div class="nav_list">
                                     <nav>
                                         <ul>
-                                            <li>
-                                                <a href="">Home</a>
-                                            </li>
-                                            <li>
-                                                <a href="">About Agency</a>
-                                            </li>
-                                            <li>
-                                                <a href="">Corporate Projects</a>
-                                            </li>
-                                            <li>
-                                                <a href="">Reviews</a>
-                                            </li>
-                                            <li>
-                                                <a href="">Blog</a>
-                                            </li>
+                                            <li><a href="">Home</a></li>
+                                            <li><a href="">About Agency</a></li>
+                                            <li><a href="">Corporate Projects</a></li>
+                                            <li><a href="">Reviews</a></li>
+                                           <li><a href="">Blog</a></li>
+                                           
                                         </ul>
                                     </nav>
                                 </div>
